<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>de.gematik.demis</groupId>
    <artifactId>spring-parent</artifactId>
    <version>2.14.20</version>
    <relativePath></relativePath><!-- lookup parent from repository -->
  </parent>
  <artifactId>fhir-ui-data-model-translation-service</artifactId>
  <version>2.3.5-SNAPSHOT</version>
  <name>FHIR UI Data Model Translation Service</name>
  <packaging>jar</packaging>
  <description>This service translates data from the DEMIS profile snapshot into processable data for
        notification-gateway and notification-portal.</description>
  <licenses>
    <license>
      <name>Licensed under the EUPL 1.2</name>
      <url>https://joinup.ec.europa.eu/collection/eupl/eupl-text-eupl-12</url>
    </license>
  </licenses>
  <properties>
    <image.docker.tag>${image.docker.registry}/futs:latest</image.docker.tag>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>21</java.version><!-- Dependencies -->
    <sonar.exclusions>**/de/gematik/demis/fhir_ui_data_model_translation_service/FhirUiDataModelTranslationServiceApplication.java,
            **/de/gematik/demis/fhir_ui_data_model_translation_service/laboratory/OldProfilesLabDataPreparationSrv.java,
            **/de/gematik/demis/fhir_ui_data_model_translation_service/disease/formly/model/EnableWhen.java,
            **/de/gematik/demis/fhir_ui_data_model_translation_service/disease/formly/model/FieldGroup.java,
            **/de/gematik/demis/fhir_ui_data_model_translation_service/disease/formly/model/Props.java,
            **/de/gematik/demis/fhir_ui_data_model_translation_service/disease/formly/model/QuestionnaireTranslation.java</sonar.exclusions>
  </properties>
  <dependencies>
    <dependency>
      <groupId>de.gematik.demis</groupId>
      <artifactId>service-base</artifactId>
    </dependency>
    <dependency>
      <groupId>de.gematik.demis</groupId>
      <artifactId>notification-builder-library</artifactId>
      <version>${notification.builder.version}</version>
    </dependency>
    <dependency>
      <groupId>de.gematik.demis</groupId>
      <artifactId>spring-parent</artifactId>
      <classifier>tests</classifier>
      <type>test-jar</type>
      <version>${project.parent.version}</version>
      <scope>test</scope>
    </dependency><!-- Required by Redis/Lettuce -->
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.4.0</version>
        <executions>
          <execution>
            <id>copy-resources</id>
            <phase>process-resources</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}${file.separator}demis-profile-snapshots</outputDirectory>
              <resources>
                <resource>
                  <directory>${project.basedir}${file.separator}demis-profile-snapshots</directory>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <profiles><!-- Downloads the FHIR Profiles -->
    <profile>
      <id>download-profiles</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-antrun-plugin</artifactId>
            <version>${maven-antrun-plugin.version}</version>
            <executions>
              <execution>
                <id>download</id>
                <phase>generate-resources</phase>
                <goals>
                  <goal>run</goal>
                </goals>
                <configuration>
                  <target name="git-checkout"><!-- Remove existing directory -->
                    <delete dir="${project.basedir}${file.separator}demis-profile-snapshots" failonerror="false"></delete><!-- Clone -->
                    <exec executable="git">
                      <arg value="clone"></arg>
                      <arg value="git@gitlab.prod.ccs.gematik.solutions:git/demis/demis-profile-snapshots.git"></arg>
                      <arg value="${project.basedir}${file.separator}demis-profile-snapshots"></arg>
                    </exec>
                  </target>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
